--- a/2.0.html
+++ b/2.0.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>This is a paragraph</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
 </body>
 </html>
